--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </section>
         <section id="contato">
             <h2>Contato</h2>
-            <form action="">
+            <form action="mailto:annekarolinefc@gmail.com">
                 <input type="text" placeholder="Digite seu nome"/>
                 <input type="email" placeholder="Digite seu e-mail"/>
                 <textarea cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
